--- a/ko/index.html
+++ b/ko/index.html
@@ -1778,19 +1778,19 @@
                 <div class="nav-right">
                     <ul class="nav-menu">
                         <li class="nav-item">
-                            <a href="#" class="nav-link active" data-target="home">홈</a>
+                            <a href="index.html" class="nav-link active">홈</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link" data-target="research-overview">연구분야</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link" data-target="team-intro">연구원소개</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link" data-target="services">제공서비스</a>
+                            <a href="research/overview.html" class="nav-link">연구분야</a>
                         </li>
                         <li class="nav-item">
                             <a href="publications/index.html" class="nav-link">연구성과</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="team/index.html" class="nav-link">연구원소개</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="partnership/index.html" class="nav-link">제공서비스</a>
                         </li>
                         <li class="nav-item">
                             <a href="contact.html" class="nav-link">문의</a>
@@ -1815,16 +1815,19 @@
             <div class="mobile-nav-menu" id="mobile-nav-menu">
                 <ul>
                     <li class="nav-item">
-                        <a href="#research-overview" class="nav-link">연구 개요</a>
+                        <a href="index.html" class="nav-link">홈</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#team" class="nav-link">연구팀</a>
+                        <a href="research/overview.html" class="nav-link">연구분야</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#data" class="nav-link">연구 성과</a>
+                        <a href="publications/index.html" class="nav-link">연구성과</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#publications" class="nav-link">논문 발표</a>
+                        <a href="team/index.html" class="nav-link">연구원소개</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="partnership/index.html" class="nav-link">제공서비스</a>
                     </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">문의</a>
