--- a/ko/publications/index.html
+++ b/ko/publications/index.html
@@ -147,7 +147,7 @@
         
         /* Hero Section for Publications */
         .publications-hero {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #1e40af, #2563eb);
             padding: 6rem 0 4rem 0;
             position: relative;
             overflow: hidden;
