히어로 섹션 텍스트 가독성 개선: 파란 배경에서 잘 보이도록 회색 텍스트를 흰색으로 변경
- 통계 숫자(.stat-number): #2c5282 → white
- 통계 라벨(.stat-label): #4a5568 → rgba(255, 255, 255, 0.9)
- 파란 그라데이션 배경과의 대비 향상으로 가독성 크게 개선

--- a/ko/publications/index.html
+++ b/ko/publications/index.html
@@ -211,12 +211,12 @@
         .stat-number {
             font-size: 2.5rem;
             font-weight: 700;
-            color: #2c5282;
+            color: white;
             display: block;
         }
         .stat-label {
             font-size: 0.9rem;
-            color: #4a5568;
+            color: rgba(255, 255, 255, 0.9);
             margin-top: 0.5rem;
         }
         
@@ -592,13 +592,13 @@
                         <a href="../research/overview.html" class="nav-link">연구분야</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../publications/index.html" class="nav-link active">연구성과</a>
-                    </li>
-                    <li class="nav-item">
                         <a href="../team/index.html" class="nav-link">연구원소개</a>
                     </li>
                     <li class="nav-item">
                         <a href="../partnership/index.html" class="nav-link">제공서비스</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="../publications/index.html" class="nav-link active">연구성과</a>
                     </li>
                     <li class="nav-item">
                         <a href="../contact.html" class="nav-link">문의</a>
