--- a/ko/contact.html
+++ b/ko/contact.html
@@ -38,6 +38,61 @@
             color: white;
             border-color: #2563eb;
         }
+        
+        /* Hero Section Override */
+        .contact-hero {
+            background: linear-gradient(135deg, #1e40af, #2563eb) !important;
+            padding: 6rem 0 4rem 0 !important;
+            position: relative;
+            overflow: hidden;
+        }
+        .contact-hero::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: 
+                radial-gradient(circle at 20% 30%, rgba(44, 82, 130, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 80% 70%, rgba(56, 161, 105, 0.08) 0%, transparent 50%);
+            z-index: 0;
+        }
+        .contact-hero::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-image: 
+                radial-gradient(circle at 25% 25%, rgba(44, 82, 130, 0.03) 1px, transparent 1px),
+                radial-gradient(circle at 75% 75%, rgba(56, 161, 105, 0.03) 1px, transparent 1px);
+            background-size: 50px 50px, 30px 30px;
+            opacity: 0.6;
+            z-index: 0;
+        }
+        .contact-hero-content {
+            text-align: center !important; 
+            max-width: 800px !important; 
+            margin: 0 auto !important;
+            padding: 0 2rem !important;
+            position: relative !important;
+            z-index: 1 !important;
+        }
+        .contact-hero .page-title { 
+            font-size: 3rem !important; 
+            font-weight: 700 !important; 
+            color: white !important; 
+            margin-bottom: 1rem !important;
+            line-height: 1.2 !important;
+        }
+        .contact-hero .page-subtitle {
+            font-size: 1.2rem !important;
+            color: rgba(255, 255, 255, 0.9) !important;
+            margin-bottom: 2rem !important;
+            line-height: 1.6 !important;
+        }
     </style>
 </head>
 <body>
@@ -88,11 +143,25 @@
     <section class="contact-hero">
         <div class="container">
             <div class="contact-hero-content">
-                <h1 class="page-title">연락처</h1>
+                <h1 class="page-title">문의</h1>
                 <p class="page-subtitle">
-                    시각재활 분야의 혁신적 기회에 대해 함께 논의해보세요. 
-                    언제든지 연락을 기다리고 있겠습니다.
+                    시각재활 분야의 혁신적 기회에 대해 함께 논의해보세요<br>
+                    언제든지 연락을 기다리고 있겠습니다
                 </p>
+                <div class="hero-stats" style="display: flex; justify-content: center; gap: 3rem; margin-top: 2rem;">
+                    <div class="stat-item" style="text-align: center;">
+                        <span class="stat-number" style="font-size: 2.5rem; font-weight: 700; color: white; display: block;">24시간</span>
+                        <div class="stat-label" style="font-size: 0.9rem; color: rgba(255, 255, 255, 0.9); margin-top: 0.5rem;">평균 응답 시간</div>
+                    </div>
+                    <div class="stat-item" style="text-align: center;">
+                        <span class="stat-number" style="font-size: 2.5rem; font-weight: 700; color: white; display: block;">100%</span>
+                        <div class="stat-label" style="font-size: 0.9rem; color: rgba(255, 255, 255, 0.9); margin-top: 0.5rem;">문의 응답률</div>
+                    </div>
+                    <div class="stat-item" style="text-align: center;">
+                        <span class="stat-number" style="font-size: 2.5rem; font-weight: 700; color: white; display: block;">3</span>
+                        <div class="stat-label" style="font-size: 0.9rem; color: rgba(255, 255, 255, 0.9); margin-top: 0.5rem;">연락 방법</div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
