--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -155,35 +155,91 @@
         
         /* Page Header */
         .page-header {
-            padding: 3rem 0;
-            text-align: left;
-            border-bottom: 1px solid #e2e8f0;
-            background: white;
+            background: linear-gradient(135deg, #1e40af, #2563eb);
+            padding: 6rem 0 4rem 0;
+            position: relative;
+            overflow: hidden;
             margin-bottom: 3rem;
+        }
+        .page-header::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: 
+                radial-gradient(circle at 20% 30%, rgba(44, 82, 130, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 80% 70%, rgba(56, 161, 105, 0.08) 0%, transparent 50%);
+            z-index: 0;
+        }
+        .page-header::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-image: 
+                radial-gradient(circle at 25% 25%, rgba(44, 82, 130, 0.03) 1px, transparent 1px),
+                radial-gradient(circle at 75% 75%, rgba(56, 161, 105, 0.03) 1px, transparent 1px);
+            background-size: 50px 50px, 30px 30px;
+            opacity: 0.6;
+            z-index: 0;
+        }
+        .page-header-content {
+            text-align: center;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 0 2rem;
+            position: relative;
+            z-index: 1;
         }
         .breadcrumb {
             font-size: 0.9rem;
-            color: #666;
+            color: rgba(255, 255, 255, 0.8);
             margin-bottom: 1rem;
         }
         .breadcrumb a {
-            color: #2c5282;
+            color: rgba(255, 255, 255, 0.9);
             text-decoration: none;
         }
         .breadcrumb a:hover {
             text-decoration: underline;
         }
         .page-title {
-            font-size: 2.5rem;
+            font-size: 3rem;
             font-weight: 700;
-            color: #2c5282;
+            color: white;
             margin-bottom: 1rem;
+            line-height: 1.2;
         }
         .page-subtitle {
-            font-size: 1.1rem;
-            color: #666;
+            font-size: 1.2rem;
+            color: rgba(255, 255, 255, 0.9);
             max-width: 800px;
-            line-height: 1.7;
+            line-height: 1.6;
+            margin-bottom: 2rem;
+        }
+        .hero-stats {
+            display: flex;
+            justify-content: center;
+            gap: 3rem;
+            margin-top: 2rem;
+        }
+        .stat-item {
+            text-align: center;
+        }
+        .stat-number {
+            font-size: 2.5rem;
+            font-weight: 700;
+            color: white;
+            display: block;
+        }
+        .stat-label {
+            font-size: 0.9rem;
+            color: rgba(255, 255, 255, 0.9);
+            margin-top: 0.5rem;
         }
         
         /* Research Categories Filter */
@@ -448,14 +504,30 @@
 
     <main class="main-content">
         <div class="page-header">
-            <div class="breadcrumb">
-                <a href="../index.html">홈</a> > 연구 프로젝트
+            <div class="page-header-content">
+                <div class="breadcrumb">
+                    <a href="../index.html">홈</a> > 연구 프로젝트
+                </div>
+                <h1 class="page-title">연구분야</h1>
+                <p class="page-subtitle">
+                    시각재활 분야에서 도전적이고 혁신적 연구를 통해 더 나은 시각과 삶의 질을 제공합니다<br>
+                    첨단 기술과 임상 경험을 바탕으로 한 다양한 연구 프로젝트를 진행하고 있습니다
+                </p>
+                <div class="hero-stats">
+                    <div class="stat-item">
+                        <span class="stat-number">5</span>
+                        <div class="stat-label">연구 프로젝트</div>
+                    </div>
+                    <div class="stat-item">
+                        <span class="stat-number">8</span>
+                        <div class="stat-label">연구 기간 (년)</div>
+                    </div>
+                    <div class="stat-item">
+                        <span class="stat-number">3</span>
+                        <div class="stat-label">기술 분야</div>
+                    </div>
+                </div>
             </div>
-            <h1 class="page-title">연구 프로젝트</h1>
-            <p class="page-subtitle">
-                시각재활 분야에서 도전적이고 혁신적 연구를 통해 더 나은 시각과 삶의 질을 제공합니다. 
-                첨단 기술과 임상 경험을 바탕으로 한 다양한 연구 프로젝트를 진행하고 있습니다.
-            </p>
         </div>
 
         <!-- Research Filter -->
