상단 탭 메뉴 구조 대대적 개편: 새로운 순서와 드롭다운 메뉴 적용
## 메뉴 순서 변경 (홈, 구성원, 도전과제, 연구성과, 파트너)
- 연구분야 → 도전과제 (3번째 위치)
- 연구원소개 → 구성원 (2번째 위치)
- 제공서비스 → 연구성과 하위 드롭다운으로 이동
- 문의 → 파트너 (5번째 위치)

## 히어로 섹션 제목 동시 업데이트
- research/overview.html: "연구분야" → "도전과제"
- team/index.html: "연구원 소개" → "구성원"
- contact.html: "문의" → "파트너"

## 적용 범위
모든 페이지의 데스크톱 및 모바일 메뉴 통일 적용:
- ko/index.html (홈페이지)
- ko/publications/index.html (연구성과)
- ko/team/index.html (구성원)
- ko/research/overview.html (도전과제)
- ko/partnership/index.html (제공서비스)
- ko/contact.html (파트너)

연구성과 메뉴에 제공서비스 드롭다운 하위 메뉴 구현

--- a/ko/partnership/index.html
+++ b/ko/partnership/index.html
@@ -276,19 +276,19 @@
                         <a href="../index.html" class="nav-link">홈</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../research/overview.html" class="nav-link">연구분야</a>
+                        <a href="../team/index.html" class="nav-link">구성원</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../team/index.html" class="nav-link">연구원소개</a>
+                        <a href="../research/overview.html" class="nav-link">도전과제</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="../partnership/index.html" class="nav-link active">제공서비스</a>
-                    </li>
-                    <li class="nav-item">
+                    <li class="nav-item dropdown">
                         <a href="../publications/index.html" class="nav-link">연구성과</a>
+                        <div class="dropdown-menu">
+                            <a href="../partnership/index.html" class="active">제공서비스</a>
+                        </div>
                     </li>
                     <li class="nav-item">
-                        <a href="../contact.html" class="nav-link">문의</a>
+                        <a href="../contact.html" class="nav-link">파트너</a>
                     </li>
                 </ul>
                 <div class="mobile-menu-toggle">
