--- a/ko/team/index.html
+++ b/ko/team/index.html
@@ -276,19 +276,19 @@
                         <a href="../index.html" class="nav-link">홈</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../research/overview.html" class="nav-link">연구분야</a>
+                        <a href="../team/index.html" class="nav-link active">구성원</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../team/index.html" class="nav-link active">연구원소개</a>
+                        <a href="../research/overview.html" class="nav-link">도전과제</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="../partnership/index.html" class="nav-link">제공서비스</a>
-                    </li>
-                    <li class="nav-item">
+                    <li class="nav-item dropdown">
                         <a href="../publications/index.html" class="nav-link">연구성과</a>
+                        <div class="dropdown-menu">
+                            <a href="../partnership/index.html">제공서비스</a>
+                        </div>
                     </li>
                     <li class="nav-item">
-                        <a href="../contact.html" class="nav-link">문의</a>
+                        <a href="../contact.html" class="nav-link">파트너</a>
                     </li>
                 </ul>
                 <div class="mobile-menu-toggle">
@@ -309,7 +309,7 @@
     <!-- Hero Section -->
     <section class="team-hero">
         <div class="hero-content">
-            <h1 class="hero-title">연구원 소개</h1>
+            <h1 class="hero-title">구성원</h1>
             <p class="hero-subtitle">
                 시각재활 연구의 핵심을 이끌어가는 전문 연구진을 소개합니다<br>
                 각 분야 최고 전문가들이 함께 혁신적인 연구를 진행하고 있습니다
