--- a/ko/contact.html
+++ b/ko/contact.html
@@ -109,19 +109,19 @@
                         <a href="index.html" class="nav-link">홈</a>
                     </li>
                     <li class="nav-item">
-                        <a href="research/overview.html" class="nav-link">연구분야</a>
+                        <a href="team/index.html" class="nav-link">구성원</a>
                     </li>
                     <li class="nav-item">
-                        <a href="team/index.html" class="nav-link">연구원소개</a>
+                        <a href="research/overview.html" class="nav-link">도전과제</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="partnership/index.html" class="nav-link">제공서비스</a>
-                    </li>
-                    <li class="nav-item">
+                    <li class="nav-item dropdown">
                         <a href="publications/index.html" class="nav-link">연구성과</a>
+                        <div class="dropdown-menu">
+                            <a href="partnership/index.html">제공서비스</a>
+                        </div>
                     </li>
                     <li class="nav-item">
-                        <a href="contact.html" class="nav-link active">문의</a>
+                        <a href="contact.html" class="nav-link active">파트너</a>
                     </li>
                 </ul>
                 <div class="mobile-menu-toggle">
@@ -143,7 +143,7 @@
     <section class="contact-hero">
         <div class="container">
             <div class="contact-hero-content">
-                <h1 class="page-title">문의</h1>
+                <h1 class="page-title">파트너</h1>
                 <p class="page-subtitle">
                     시각재활 분야의 혁신적 기회에 대해 함께 논의해보세요<br>
                     언제든지 연락을 기다리고 있겠습니다
