--- a/ko/index.html
+++ b/ko/index.html
@@ -1781,19 +1781,19 @@
                             <a href="index.html" class="nav-link active">홈</a>
                         </li>
                         <li class="nav-item">
-                            <a href="research/overview.html" class="nav-link">연구분야</a>
+                            <a href="team/index.html" class="nav-link">구성원</a>
                         </li>
                         <li class="nav-item">
+                            <a href="research/overview.html" class="nav-link">도전과제</a>
+                        </li>
+                        <li class="nav-item dropdown">
                             <a href="publications/index.html" class="nav-link">연구성과</a>
+                            <div class="dropdown-menu">
+                                <a href="partnership/index.html">제공서비스</a>
+                            </div>
                         </li>
                         <li class="nav-item">
-                            <a href="team/index.html" class="nav-link">연구원소개</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="partnership/index.html" class="nav-link">제공서비스</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="contact.html" class="nav-link">문의</a>
+                            <a href="contact.html" class="nav-link">파트너</a>
                         </li>
                     </ul>
                     
@@ -1818,19 +1818,19 @@
                         <a href="index.html" class="nav-link">홈</a>
                     </li>
                     <li class="nav-item">
-                        <a href="research/overview.html" class="nav-link">연구분야</a>
+                        <a href="team/index.html" class="nav-link">구성원</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="research/overview.html" class="nav-link">도전과제</a>
                     </li>
                     <li class="nav-item">
                         <a href="publications/index.html" class="nav-link">연구성과</a>
                     </li>
                     <li class="nav-item">
-                        <a href="team/index.html" class="nav-link">연구원소개</a>
-                    </li>
-                    <li class="nav-item">
                         <a href="partnership/index.html" class="nav-link">제공서비스</a>
                     </li>
                     <li class="nav-item">
-                        <a href="contact.html" class="nav-link">문의</a>
+                        <a href="contact.html" class="nav-link">파트너</a>
                     </li>
                 </ul>
                 
