--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -472,19 +472,19 @@
                         <a href="../index.html" class="nav-link">홈</a>
                     </li>
                     <li class="nav-item">
-                        <a href="overview.html" class="nav-link active">연구분야</a>
+                        <a href="../team/index.html" class="nav-link">구성원</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../team/index.html" class="nav-link">연구원소개</a>
+                        <a href="overview.html" class="nav-link active">도전과제</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="../partnership/index.html" class="nav-link">제공서비스</a>
-                    </li>
-                    <li class="nav-item">
+                    <li class="nav-item dropdown">
                         <a href="../publications/index.html" class="nav-link">연구성과</a>
+                        <div class="dropdown-menu">
+                            <a href="../partnership/index.html">제공서비스</a>
+                        </div>
                     </li>
                     <li class="nav-item">
-                        <a href="../contact.html" class="nav-link">문의</a>
+                        <a href="../contact.html" class="nav-link">파트너</a>
                     </li>
                 </ul>
                 <div class="mobile-menu-toggle">
@@ -506,12 +506,12 @@
         <div class="page-header">
             <div class="page-header-content">
                 <div class="breadcrumb">
-                    <a href="../index.html">홈</a> > 연구 프로젝트
+                    <a href="../index.html">홈</a> > 도전과제
                 </div>
-                <h1 class="page-title">연구분야</h1>
+                <h1 class="page-title">도전과제</h1>
                 <p class="page-subtitle">
-                    시각재활 분야에서 도전적이고 혁신적 연구를 통해 더 나은 시각과 삶의 질을 제공합니다<br>
-                    첨단 기술과 임상 경험을 바탕으로 한 다양한 연구 프로젝트를 진행하고 있습니다
+                    시각재활 분야의 핵심 도전과제를 해결하기 위한 혁신적 연구를 진행합니다<br>
+                    첨단 기술과 임상 경험을 바탕으로 한 다양한 연구 프로젝트를 통해 새로운 솔루션을 제시합니다
                 </p>
                 <div class="hero-stats">
                     <div class="stat-item">
