feat: Restore content and implement new design
- Extracted research projects and publications from the old structure.
- Created a new  file to store all the data.
- Implemented a new, simpler design with a new color scheme and typography.
- Created new HTML and JavaScript files to reflect the new structure.
- Removed old and unnecessary files and directories.

--- a/publications.html
+++ b/publications.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MasVisio Research</title>
+    <title>Publications - MasVisio Research</title>
     <link rel="stylesheet" href="assets/css/new-main.css">
     <link rel="stylesheet" href="assets/css/components.css">
 </head>
@@ -21,8 +22,8 @@
 
     <main>
         <div class="container">
-            <h2>Welcome to MasVisio Research</h2>
-            <p>We are a research group dedicated to advancing the field of vision science.</p>
+            <h2>Publications</h2>
+            <div id="publications"></div>
         </div>
     </main>
 
