refactor: Fix infinite loop and simplify architecture
- Removed conflicting DOMContentLoaded listeners and SPA navigation logic that caused an infinite loop.
- Refactored JavaScript to a multi-page architecture, dynamically loading content from a JSON file.
- Created separate HTML files for research and publications.
- Simplified and streamlined the overall site structure.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         <div class="container">
             <h2>Welcome to MasVisio Research</h2>
             <p>We are a research group dedicated to advancing the field of vision science.</p>
+            
+            <section id="research-projects">
+                <h3>Research Projects</h3>
+                <div id="research-projects-container">
+                    <!-- Projects will be loaded here by main.js -->
+                </div>
+            </section>
         </div>
     </main>
 
@@ -32,7 +39,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/i18n.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
