--- a/publications.html
+++ b/publications.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -23,7 +22,9 @@
     <main>
         <div class="container">
             <h2>Publications</h2>
-            <div id="publications"></div>
+            <div id="publications-container">
+                <!-- Publications will be loaded here by main.js -->
+            </div>
         </div>
     </main>
 
@@ -33,7 +34,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/i18n.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
