--- a/research.html
+++ b/research.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -22,8 +21,10 @@
 
     <main>
         <div class="container">
-            <h2>Our Research</h2>
-            <div id="research-projects"></div>
+            <h2>Research Projects</h2>
+            <div id="research-projects-container">
+                <!-- Projects will be loaded here by main.js -->
+            </div>
         </div>
     </main>
 
@@ -33,7 +34,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/i18n.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
