feat: Redesign website with a professional and modern aesthetic
- Inspired by the websites of the Max Planck and Fraunhofer Institutes.
- Updated the color scheme, typography, and layout for a cleaner and more content-focused user experience.
- Implemented a grid-based layout for research projects and publications.
- Added a new hero section and improved the overall structure of the HTML files.
- The new design is more professional, trustworthy, and modern.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MasVisio Research</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/new-main.css">
     <link rel="stylesheet" href="assets/css/components.css">
 </head>
@@ -12,7 +13,7 @@
         <div class="container">
             <h1>MasVisio Research</h1>
             <nav>
-                <a href="index.html">Home</a>
+                <a href="index.html" class="active">Home</a>
                 <a href="research.html">Research</a>
                 <a href="publications.html">Publications</a>
             </nav>
@@ -20,22 +21,25 @@
     </header>
 
     <main>
-        <div class="container">
-            <h2>Welcome to MasVisio Research</h2>
-            <p>We are a research group dedicated to advancing the field of vision science.</p>
-            
-            <section id="research-projects">
-                <h3>Research Projects</h3>
-                <div id="research-projects-container">
-                    <!-- Projects will be loaded here by main.js -->
-                </div>
-            </section>
+        <section class="hero">
+            <div class="container">
+                <h2>Pioneering Vision Science</h2>
+                <p>Dedicated to advancing the field of vision science through innovative research and technology.</p>
+            </div>
+        </section>
+
+        <div class="container" id="research-projects-container">
+            <!-- Projects will be loaded here by main.js -->
         </div>
     </main>
 
     <footer>
         <div class="container">
             <p>&copy; 2025 MasVisio Research</p>
+            <div>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Contact</a>
+            </div>
         </div>
     </footer>
 
