--- a/research.html
+++ b/research.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research - MasVisio Research</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/new-main.css">
     <link rel="stylesheet" href="assets/css/components.css">
 </head>
@@ -13,7 +14,7 @@
             <h1>MasVisio Research</h1>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="research.html">Research</a>
+                <a href="research.html" class="active">Research</a>
                 <a href="publications.html">Publications</a>
             </nav>
         </div>
@@ -21,7 +22,8 @@
 
     <main>
         <div class="container">
-            <h2>Research Projects</h2>
+            <h2>Our Research</h2>
+            <p>We are focused on several key areas of vision science, with the goal of developing new technologies to improve people's lives.</p>
             <div id="research-projects-container">
                 <!-- Projects will be loaded here by main.js -->
             </div>
@@ -31,6 +33,10 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 MasVisio Research</p>
+            <div>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Contact</a>
+            </div>
         </div>
     </footer>
 
