--- a/publications.html
+++ b/publications.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publications - MasVisio Research</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/new-main.css">
     <link rel="stylesheet" href="assets/css/components.css">
 </head>
@@ -14,14 +15,15 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="research.html">Research</a>
-                <a href="publications.html">Publications</a>
+                <a href="publications.html" class="active">Publications</a>
             </nav>
         </div>
     </header>
 
     <main>
         <div class="container">
-            <h2>Publications</h2>
+            <h2>Our Publications</h2>
+            <p>We are proud to share our research with the scientific community. Here are some of our recent publications.</p>
             <div id="publications-container">
                 <!-- Publications will be loaded here by main.js -->
             </div>
@@ -31,6 +33,10 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 MasVisio Research</p>
+            <div>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Contact</a>
+            </div>
         </div>
     </footer>
 
