--- a/ko/index.html
+++ b/ko/index.html
@@ -11,8 +11,8 @@
     <meta property="og:description" content="혁신적인 연구와 기술을 통해 시각 과학 분야를 선도합니다.">
     <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/main.css">
-    <link rel="stylesheet" href="../assets/css/components.css">
+    <link rel="stylesheet" href="../assets/css/main.css?v=1.2">
+    <link rel="stylesheet" href="../assets/css/components.css?v=1.2">
 </head>
 
 <body>
@@ -29,7 +29,13 @@
                 <div class="nav-links">
                     <a href="index.html" class="active">홈</a>
                     <a href="team/index.html">구성원</a>
-                    <a href="research/overview.html">도전과제</a>
+                    <div class="nav-item dropdown">
+                        <a href="research/overview.html">연구분야</a>
+                        <div class="dropdown-menu">
+                            <a href="research/overview.html">연구 개요</a>
+                            <a href="research/diagnostics.html">AI 질환 진단</a>
+                        </div>
+                    </div>
                     <a href="publications/index.html">연구성과</a>
                     <a href="partnership/index.html">제공서비스</a>
                     <a href="contact.html">파트너</a>
@@ -52,48 +58,24 @@
                 <div class="features-grid">
                     <div class="feature-card">
                         <h3>4D 근시 제어 기술</h3>
+                        <img src="/assets/images/research/myopia_control_4d.png" alt="4D 근시 제어 기술">
                         <p>공간, 시간, 스펙트럼, 개인 차원을 통합한 차세대 근시 억제 플랫폼을 연구합니다.</p>
                     </div>
                     <div class="feature-card">
                         <h3>AI 기반 시각 진단</h3>
+                        <img src="/assets/images/research/ai_visual_diagnosis.png" alt="AI 기반 시각 진단">
                         <p>딥러닝을 활용한 정밀 시각 진단 및 개인맞춤형 치료 시스템을 개발합니다.</p>
                     </div>
                     <div class="feature-card">
                         <h3>바이오메트릭 측정</h3>
+                        <img src="/assets/images/research/biometric_measurement.png" alt="바이오메트릭 측정">
                         <p>첨단 광학 기술을 이용한 비침습적 안구 생체지표 측정 기술을 선도합니다.</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="section" style="background-color: #f8f9fa;">
-            <div class="container">
-                <h2 class="section-title">연구 현황</h2>
-                <div class="stats-grid">
-                    <div class="stat-item">
-                        <h3>3건</h3>
-                        <p>진행 중인 프로젝트</p>
-                    </div>
-                    <div class="stat-item">
-                        <h3>7건</h3>
-                        <p>특허 등록</p>
-                    </div>
-                    <div class="stat-item">
-                        <h3>2상</h3>
-                        <p>임상 시험 완료</p>
-                    </div>
-                </div>
-            </div>
-        </section>
 
-        <section class="section">
-            <div class="container">
-                <h2 class="section-title">MasVisio Research 팀</h2>
-                <p style="text-align: center; max-width: 800px; margin: 0 auto;">
-                    시각재활 분야의 세계적 전문가들이 모인 MasVisio Research는 혁신적인 기술 개발과 임상 연구를 통해 시각장애인의 삶의 질 향상을 위해 노력하고 있습니다.
-                </p>
-            </div>
-        </section>
     </main>
 
     <footer>
