feat: Update biometric measurement image with eye integration and cache busting

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="feature-card">
                         <h3>Biometric Measurement</h3>
-                        <img src="/assets/images/research/biometric_measurement.png" alt="Biometric Measurement">
+                        <img src="/assets/images/research/biometric_measurement.png?v=2" alt="Biometric Measurement">
                         <p>Leading non-invasive ocular biomarker measurement technology using advanced optics.</p>
                     </div>
                 </div>
