--- a/ko/index.html
+++ b/ko/index.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="feature-card">
                         <h3>바이오메트릭 측정</h3>
-                        <img src="/assets/images/research/biometric_measurement.png" alt="바이오메트릭 측정">
+                        <img src="/assets/images/research/biometric_measurement.png?v=2" alt="바이오메트릭 측정">
                         <p>첨단 광학 기술을 이용한 비침습적 안구 생체지표 측정 기술을 선도합니다.</p>
                     </div>
                 </div>
