--- a/ko/index.html
+++ b/ko/index.html
@@ -58,17 +58,17 @@
                 <div class="features-grid">
                     <div class="feature-card">
                         <h3>4D 근시 제어 기술</h3>
-                        <img src="/assets/images/research/myopia_control_4d.png" alt="4D 근시 제어 기술">
+                        <img src="../assets/images/research/myopia_control_4d.png" alt="4D 근시 제어 기술">
                         <p>공간, 시간, 스펙트럼, 개인 차원을 통합한 차세대 근시 억제 플랫폼을 연구합니다.</p>
                     </div>
                     <div class="feature-card">
                         <h3>AI 기반 시각 진단</h3>
-                        <img src="/assets/images/research/ai_visual_diagnosis.png" alt="AI 기반 시각 진단">
+                        <img src="../assets/images/research/ai_visual_diagnosis.png" alt="AI 기반 시각 진단">
                         <p>딥러닝을 활용한 정밀 시각 진단 및 개인맞춤형 치료 시스템을 개발합니다.</p>
                     </div>
                     <div class="feature-card">
                         <h3>바이오메트릭 측정</h3>
-                        <img src="/assets/images/research/biometric_measurement.png?v=2" alt="바이오메트릭 측정">
+                        <img src="../assets/images/research/biometric_measurement.png?v=2" alt="바이오메트릭 측정">
                         <p>첨단 광학 기술을 이용한 비침습적 안구 생체지표 측정 기술을 선도합니다.</p>
                     </div>
                 </div>
