Update publications page: add submenus, ISO 690 format, and statistics bar

--- a/publications/index.html
+++ b/publications/index.html
@@ -29,6 +29,16 @@
             <a href="../team/index.html" class="nav-item">Team</a>
             <a href="../research/overview.html" class="nav-item">Challenges</a>
             <a href="index.html" class="nav-item active">Publications</a>
+            <div class="sidebar-submenu"
+                style="padding-left: 1.5rem; display: flex; flex-direction: column; gap: 0.2rem; margin-bottom: 0.5rem;">
+                <a href="#reviewed-papers" class="nav-item"
+                    style="font-size: 0.9rem; padding: 0.4rem 1rem; color: #003366; background-color: rgba(0, 51, 102, 0.03);">Reviewed
+                    Papers</a>
+                <a href="#conference" class="nav-item"
+                    style="font-size: 0.9rem; padding: 0.4rem 1rem; color: #64748b;">Conference</a>
+                <a href="#patent" class="nav-item"
+                    style="font-size: 0.9rem; padding: 0.4rem 1rem; color: #64748b;">Patent</a>
+            </div>
             <a href="../partnership/index.html" class="nav-item">Services</a>
             <a href="../contact.html" class="nav-item">Partners</a>
         </nav>
