Add Gallery page, sync conference data, update language flags

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Publications - MasVisio Research</title>
+    <title>Gallery - MasVisio Research</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/main.css?v=1.4">
@@ -21,33 +21,24 @@
         </div>
 
         <div class="lang-switch">
-            <a href="../ko/publications/index.html">🇰🇷</a> <span class="active">🇬🇧</span>
+            <a href="../ko/gallery/index.html">🇰🇷</a> <span class="active">🇬🇧</span>
         </div>
 
         <nav class="sidebar-nav">
             <a href="../index.html" class="nav-item">Home</a>
             <a href="../team/index.html" class="nav-item">Team</a>
             <a href="../research/overview.html" class="nav-item">Challenges</a>
-            <a href="index.html" class="nav-item active">Publications</a>
-            <div class="sidebar-submenu"
-                style="padding-left: 1.5rem; display: flex; flex-direction: column; gap: 0.2rem; margin-bottom: 0.5rem;">
-                <a href="#reviewed-papers" class="nav-item"
-                    style="font-size: 0.9rem; padding: 0.4rem 1rem; color: #003366; background-color: rgba(0, 51, 102, 0.03);">Reviewed
-                    Papers</a>
-                <a href="#conference" class="nav-item"
-                    style="font-size: 0.9rem; padding: 0.4rem 1rem; color: #64748b;">Conference</a>
-                <a href="#patent" class="nav-item"
-                    style="font-size: 0.9rem; padding: 0.4rem 1rem; color: #64748b;">Patent</a>
-            </div>
+            <a href="../publications/index.html" class="nav-item">Publications</a>
+            <a href="index.html" class="nav-item active">Gallery</a>
             <a href="../partnership/index.html" class="nav-item">Services</a>
-            <a href="../contact.html" class="nav-item">Partners</a>
+            <a href="../contact.html" class="nav-item">Contact</a>
         </nav>
 
         <div class="sidebar-footer">
             <p class="copyright">&copy; 2025 MasVisio Research</p>
             <div style="margin-top: 10px; font-size: 0.7rem;">
                 <a href="../privacy.html" style="color: #94a3b8; text-decoration: none;">Privacy Policy</a> |
-                <a href="../contact.html" style="color: #94a3b8; text-decoration: none;">Contact</a>
+                <a href="../contact.html" style="color: #94a3b8; text-decoration: none;">Contact Us</a>
             </div>
         </div>
     </aside>
@@ -56,23 +47,18 @@
         <section class="section" style="padding: 4rem 4rem;">
             <div class="container">
                 <header style="margin-bottom: 4rem; border-bottom: none;">
-                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">Publications</h2>
-                    <p style="font-size: 1.2rem; color: #64748b;">Our latest research findings and academic
-                        contributions.</p>
+                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">Gallery</h2>
+                    <p style="font-size: 1.2rem; color: #64748b;">Explore our research activities and events.</p>
                 </header>
 
-                <div id="publications-container">
-                    <!-- Dynamic content will be loaded here -->
-                    <p>Loading publications...</p>
+                <div id="gallery-container">
+                    <p>Coming Soon...</p>
                 </div>
             </div>
         </section>
     </main>
 
     <script src="../assets/js/main_v2.js?v=1.4"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', loadPublications);
-    </script>
 </body>
 
 </html>
