--- a/research/overview.html
+++ b/research/overview.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="lang-switch">
-            <span class="active">🇺🇸</span> <a href="../ko/research/overview.html">🇰🇷</a>
+            <a href="../ko/research/overview.html">🇰🇷</a> <span class="active">🇬🇧</span>
         </div>
 
         <nav class="sidebar-nav">
@@ -28,6 +28,7 @@
             <a href="../team/index.html" class="nav-item">Team</a>
             <a href="overview.html" class="nav-item active">Challenges</a>
             <a href="../publications/index.html" class="nav-item">Publications</a>
+            <a href="../gallery/index.html" class="nav-item">Gallery</a>
             <a href="../partnership/index.html" class="nav-item">Services</a>
             <a href="../contact.html" class="nav-item">Partners</a>
         </nav>
