--- a/research/project.html
+++ b/research/project.html
@@ -19,7 +19,7 @@
             </div>
             <nav>
                 <div class="lang-switch">
-                    <span class="active">🇺🇸</span> <a href="#" onclick="switchLanguage('ko'); return false;">🇰🇷</a>
+                    <a href="#">🇰🇷</a> <span class="active">🇬🇧</span>
                 </div>
                 <div class="nav-links">
                     <a href="../index.html">Home</a>
