--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="lang-switch">
-            <span class="active">🇺🇸</span> <a href="ko/index.html">🇰🇷</a>
+            <a href="ko/index.html">🇰🇷</a> <span class="active">🇬🇧</span>
         </div>
 
         <nav class="sidebar-nav">
@@ -35,6 +35,7 @@
             <a href="team/index.html" class="nav-item">Team</a>
             <a href="research/overview.html" class="nav-item">Challenges</a>
             <a href="publications/index.html" class="nav-item">Publications</a>
+            <a href="gallery/index.html" class="nav-item">Gallery</a>
             <a href="partnership/index.html" class="nav-item">Services</a>
             <a href="contact.html" class="nav-item">Partners</a>
         </nav>
