--- a/ko/gallery/index.html
+++ b/ko/gallery/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 질환 진단 및 예측 - MasVisio Research</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <title>갤러리 - MasVisio Research</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../../assets/css/main.css?v=1.4">
     <link rel="stylesheet" href="../../assets/css/components.css?v=1.4">
 </head>
@@ -20,15 +21,15 @@
         </div>
 
         <div class="lang-switch">
-            <span class="active">🇰🇷</span> <a href="../../research/diagnostics.html">🇬🇧</a>
+            <span class="active">🇰🇷</span> <a href="../../gallery/index.html">🇬🇧</a>
         </div>
 
         <nav class="sidebar-nav">
             <a href="../index.html" class="nav-item">홈</a>
             <a href="../team/index.html" class="nav-item">구성원</a>
-            <a href="overview.html" class="nav-item active">도전과제</a>
+            <a href="../research/overview.html" class="nav-item">도전과제</a>
             <a href="../publications/index.html" class="nav-item">연구성과</a>
-            <a href="../gallery/index.html" class="nav-item">갤러리</a>
+            <a href="index.html" class="nav-item active">갤러리</a>
             <a href="../partnership/index.html" class="nav-item">제공서비스</a>
             <a href="../contact.html" class="nav-item">파트너</a>
         </nav>
@@ -46,19 +47,18 @@
         <section class="section" style="padding: 4rem 4rem;">
             <div class="container">
                 <header style="margin-bottom: 4rem; border-bottom: none;">
-                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">전반적 안구 측정 기반 질환 예측</h2>
-                    <p style="font-size: 1.2rem; color: #64748b;">AI 시각 지능을 활용한 8단계 안구 질환 위험도 분석 시스템</p>
+                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">갤러리</h2>
+                    <p style="font-size: 1.2rem; color: #64748b;">연구 활동과 다양한 행사 모습을 소개합니다.</p>
                 </header>
 
-                <div id="diagnostics-container">
-                    <!-- Dynamic content will be loaded here from assets/js/main.js -->
-                    <div class="loading">데이터를 불러오는 중...</div>
+                <div id="gallery-container">
+                    <p>준비 중입니다...</p>
                 </div>
             </div>
         </section>
     </main>
 
-    <script src="../../assets/js/main.js?v=1.4"></script>
+    <script src="../../assets/js/main_v2.js?v=1.4"></script>
 </body>
 
 </html>
