--- a/ko/index.html
+++ b/ko/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="lang-switch">
-            <a href="../index.html">🇺🇸</a> <span class="active">🇰🇷</span>
+            <span class="active">🇰🇷</span> <a href="../index.html">🇬🇧</a>
         </div>
 
         <nav class="sidebar-nav">
@@ -34,6 +34,7 @@
             <a href="team/index.html" class="nav-item">구성원</a>
             <a href="research/overview.html" class="nav-item">도전과제</a>
             <a href="publications/index.html" class="nav-item">연구성과</a>
+            <a href="gallery/index.html" class="nav-item">갤러리</a>
             <a href="partnership/index.html" class="nav-item">제공서비스</a>
             <a href="contact.html" class="nav-item">파트너</a>
         </nav>
