--- a/ko/publications.html
+++ b/ko/publications.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="lang-switch">
-            <a href="../publications/index.html">🇺🇸</a> <span class="active">🇰🇷</span>
+            <span class="active">🇰🇷</span> <a href="../publications/index.html">🇬🇧</a>
         </div>
 
         <nav class="sidebar-nav">
@@ -33,6 +33,7 @@
             <a href="team/index.html" class="nav-item">구성원</a>
             <a href="research/overview.html" class="nav-item">도전과제</a>
             <a href="publications.html" class="nav-item active">연구성과</a>
+            <a href="gallery/index.html" class="nav-item">갤러리</a>
             <a href="partnership/index.html" class="nav-item">제공서비스</a>
             <a href="contact.html" class="nav-item">파트너</a>
         </nav>
