--- a/ko/publications/index.html
+++ b/ko/publications/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="lang-switch">
-            <a href="../../publications/index.html">🇺🇸</a> <span class="active">🇰🇷</span>
+            <span class="active">🇰🇷</span> <a href="../../publications/index.html">🇬🇧</a>
         </div>
 
         <nav class="sidebar-nav">
@@ -29,6 +29,7 @@
             <a href="../team/index.html" class="nav-item">구성원</a>
             <a href="../research/overview.html" class="nav-item">도전과제</a>
             <a href="index.html" class="nav-item active">연구성과</a>
+            <a href="../gallery/index.html" class="nav-item">갤러리</a>
             <div class="sidebar-submenu"
                 style="padding-left: 1.5rem; display: flex; flex-direction: column; gap: 0.2rem; margin-bottom: 0.5rem;">
                 <a href="#reviewed-papers" class="nav-item"
