--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="lang-switch">
-            <a href="../../research/overview.html">🇺🇸</a> <span class="active">🇰🇷</span>
+            <span class="active">🇰🇷</span> <a href="../../research/overview.html">🇬🇧</a>
         </div>
 
         <nav class="sidebar-nav">
@@ -28,6 +28,7 @@
             <a href="../team/index.html" class="nav-item">구성원</a>
             <a href="overview.html" class="nav-item active">도전과제</a>
             <a href="../publications/index.html" class="nav-item">연구성과</a>
+            <a href="../gallery/index.html" class="nav-item">갤러리</a>
             <a href="../partnership/index.html" class="nav-item">제공서비스</a>
             <a href="../contact.html" class="nav-item">파트너</a>
         </nav>
