Fix sidebar navigation order for Gallery menu

--- a/publications/index.html
+++ b/publications/index.html
@@ -39,6 +39,7 @@
                 <a href="#patent" class="nav-item"
                     style="font-size: 0.9rem; padding: 0.4rem 1rem; color: #64748b;">Patent</a>
             </div>
+            <a href="../gallery/index.html" class="nav-item">Gallery</a>
             <a href="../partnership/index.html" class="nav-item">Services</a>
             <a href="../contact.html" class="nav-item">Partners</a>
         </nav>
