⚡ 성능 개선 및 리팩토링: JS 표준화 및 연구성과 페이지 구조 개선

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body class="sidebar-layout">
-    <aside class="sidebar">
+    <aside class="sidebar" role="navigation" aria-label="Main navigation">
         <div class="sidebar-header">
             <a href="index.html" class="sidebar-logo">
                 <h1>MasVisio<br>Research</h1>
@@ -108,7 +108,8 @@
                     </div>
                     <div class="feature-card">
                         <h3>Biometric Measurement</h3>
-                        <img src="assets/images/research/biometric_measurement.png?v=2" alt="Biometric Measurement" loading="lazy">
+                        <img src="assets/images/research/biometric_measurement.png?v=2" alt="Biometric Measurement"
+                            loading="lazy">
                         <p>Leading non-invasive ocular biomarker measurement technology using advanced optical
                             technology.</p>
                     </div>
@@ -117,7 +118,7 @@
         </section>
     </main>
 
-    <script src="assets/js/main_v2.js?v=1.4"></script>
+    <script src="assets/js/main.js?v=1.5"></script>
 </body>
 
 </html>
