--- a/ko/index.html
+++ b/ko/index.html
@@ -18,7 +18,7 @@
 
 <body class="sidebar-layout">
     <!-- Sidebar Navigation -->
-    <aside class="sidebar">
+    <aside class="sidebar" role="navigation" aria-label="메인 네비게이션">
         <div class="sidebar-header">
             <a href="index.html" class="sidebar-logo">
                 <h1>MasVisio<br>Research</h1>
@@ -101,7 +101,8 @@
                     </div>
                     <div class="feature-card">
                         <h3>바이오메트릭 측정<br>(Biometric Measurement)</h3>
-                        <img src="../assets/images/research/biometric_measurement.png?v=2" alt="바이오메트릭 측정" loading="lazy">
+                        <img src="../assets/images/research/biometric_measurement.png?v=2" alt="바이오메트릭 측정"
+                            loading="lazy">
                         <p>첨단 광학 기술을 이용한 비침습적 안구 생체지표 측정 기술을 선도합니다.</p>
                     </div>
                 </div>
@@ -109,7 +110,7 @@
         </section>
     </main>
 
-    <script src="../assets/js/main_v2.js?v=1.4"></script>
+    <script src="../assets/js/main.js?v=1.5"></script>
 </body>
 
 </html>
