--- a/ko/research/diagnostics.html
+++ b/ko/research/diagnostics.html
@@ -56,14 +56,14 @@
                 </header>
 
                 <div id="diagnostics-container">
-                    <!-- Dynamic content will be loaded here from assets/js/main_v2.js -->
+                    <!-- Dynamic content will be loaded here from assets/js/main.js -->
                     <div class="loading">데이터를 불러오는 중...</div>
                 </div>
             </div>
         </section>
     </main>
 
-    <script src="../../assets/js/main_v2.js?v=1.4"></script>
+    <script src="../../assets/js/main.js?v=1.4"></script>
 </body>
 
 </html>
