--- a/publications/index.html
+++ b/publications/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publications - MasVisio Research</title>
-    <meta name="description" content="Explore peer-reviewed publications from MasVisio Research in vision science, myopia control, and AI diagnostics.">
+    <meta name="description"
+        content="Explore peer-reviewed publications from MasVisio Research in vision science, myopia control, and AI diagnostics.">
     <meta property="og:title" content="Publications - MasVisio Research">
-    <meta property="og:description" content="Explore peer-reviewed publications from MasVisio Research in vision science, myopia control, and AI diagnostics.">
+    <meta property="og:description"
+        content="Explore peer-reviewed publications from MasVisio Research in vision science, myopia control, and AI diagnostics.">
     <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -16,7 +18,7 @@
 </head>
 
 <body class="sidebar-layout">
-    <aside class="sidebar">
+    <aside class="sidebar" role="navigation" aria-label="Main navigation">
         <div class="sidebar-header">
             <a href="../index.html" class="sidebar-logo">
                 <h1>MasVisio<br>Research</h1>
@@ -74,10 +76,7 @@
         </section>
     </main>
 
-    <script src="../assets/js/main_v2.js?v=1.4"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', loadPublications);
-    </script>
+    <script src="../assets/js/main.js?v=1.5"></script>
 </body>
 
 </html>
