--- a/research/diagnostics.html
+++ b/research/diagnostics.html
@@ -57,14 +57,14 @@
                 </header>
 
                 <div id="diagnostics-container">
-                    <!-- Dynamic content will be loaded here from assets/js/main_v2.js -->
+                    <!-- Dynamic content will be loaded here from assets/js/main.js -->
                     <div class="loading">Loading data...</div>
                 </div>
             </div>
         </section>
     </main>
 
-    <script src="../assets/js/main_v2.js?v=1.4"></script>
+    <script src="../assets/js/main.js?v=1.4"></script>
 </body>
 
 </html>
