--- a/ko/publications/index.html
+++ b/ko/publications/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body class="sidebar-layout">
-    <aside class="sidebar">
+    <aside class="sidebar" role="navigation" aria-label="메인 네비게이션">
         <div class="sidebar-header">
             <a href="../index.html" class="sidebar-logo">
                 <h1>MasVisio<br>Research</h1>
@@ -73,10 +73,7 @@
         </section>
     </main>
 
-    <script src="../../assets/js/main_v2.js?v=1.4"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', loadPublications);
-    </script>
+    <script src="../../assets/js/main.js?v=1.5"></script>
 </body>
 
 </html>
