--- a/ko/research/project.html
+++ b/ko/research/project.html
@@ -57,7 +57,7 @@
         </section>
     </main>
 
-    <script src="../../assets/js/main_v2.js?v=1.4"></script>
+    <script src="../../assets/js/main.js?v=1.4"></script>
     <script>
         function switchLanguage(lang) {
             const params = new URLSearchParams(window.location.search);
