--- a/ko/team/index.html
+++ b/ko/team/index.html
@@ -61,7 +61,7 @@
         </section>
     </main>
 
-    <script src="../../assets/js/main_v2.js?v=1.4"></script>
+    <script src="../../assets/js/main.js?v=1.4"></script>
 </body>
 
 </html>
