--- a/research/overview.html
+++ b/research/overview.html
@@ -166,7 +166,7 @@
         </section>
     </main>
 
-    <script src="../assets/js/main_v2.js?v=1.4"></script>
+    <script src="../assets/js/main.js?v=1.4"></script>
 </body>
 
 </html>
