--- a/research/project.html
+++ b/research/project.html
@@ -65,7 +65,7 @@
         </div>
     </footer>
 
-    <script src="../assets/js/main_v2.js?v=1.4"></script>
+    <script src="../assets/js/main.js?v=1.4"></script>
     <script>
         // Simple language switcher for the project page to keep the ID
         function switchLanguage(lang) {
