⚡ UI 업데이트: 모바일 로고 가시성 개선 및 구성원 정보 수정 (사진 제거/소속 추가)

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 </head>
 
 <body class="sidebar-layout">
+    <header class="mobile-header">
+        <a href="index.html" class="mobile-logo">MasVisio Research</a>
+    </header>
     <aside class="sidebar" role="navigation" aria-label="Main navigation">
         <div class="sidebar-header">
             <a href="index.html" class="sidebar-logo">
