--- a/ko/index.html
+++ b/ko/index.html
@@ -17,6 +17,9 @@
 </head>
 
 <body class="sidebar-layout">
+    <header class="mobile-header">
+        <a href="index.html" class="mobile-logo">MasVisio Research</a>
+    </header>
     <!-- Sidebar Navigation -->
     <aside class="sidebar" role="navigation" aria-label="메인 네비게이션">
         <div class="sidebar-header">
