--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <aside class="sidebar" role="navigation" aria-label="Main navigation">
         <div class="sidebar-header">
             <a href="index.html" class="sidebar-logo">
-                <h1>MasVisio<br>Research</h1>
+                <h1>MasVisio Research</h1>
                 <span class="sidebar-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
             </a>
         </div>
