--- a/ko/index.html
+++ b/ko/index.html
@@ -24,7 +24,7 @@
     <aside class="sidebar" role="navigation" aria-label="메인 네비게이션">
         <div class="sidebar-header">
             <a href="index.html" class="sidebar-logo">
-                <h1>MasVisio<br>Research</h1>
+                <h1>MasVisio Research</h1>
                 <span class="sidebar-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
             </a>
         </div>
