⚡ UI 업데이트: 모바일 헤더에 전체 브랜드 로고(부제 포함) 적용 및 중앙 정렬

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 </head>
 
 <body class="sidebar-layout">
-    <header class="mobile-header">
-        <a href="index.html" class="mobile-logo">MasVisio Research</a>
+        <header class="mobile-header">
+        <a href="index.html" class="mobile-logo">
+            <h1>MasVisio Research</h1>
+            <span>Vision Intelligence & Biomedical Engineering</span>
+        </a>
     </header>
     <aside class="sidebar" role="navigation" aria-label="Main navigation">
         <div class="sidebar-header">
