--- a/ko/index.html
+++ b/ko/index.html
@@ -17,8 +17,11 @@
 </head>
 
 <body class="sidebar-layout">
-    <header class="mobile-header">
-        <a href="index.html" class="mobile-logo">MasVisio Research</a>
+        <header class="mobile-header">
+        <a href="index.html" class="mobile-logo">
+            <h1>MasVisio Research</h1>
+            <span>Vision Intelligence & Biomedical Engineering</span>
+        </a>
     </header>
     <!-- Sidebar Navigation -->
     <aside class="sidebar" role="navigation" aria-label="메인 네비게이션">
