⚡ UI 업데이트: 모든 페이지에 브랜드 전체 로고 적용 (부제 포함)

--- a/publications/index.html
+++ b/publications/index.html
@@ -18,6 +18,13 @@
 </head>
 
 <body class="sidebar-layout">
+    <header class="mobile-header">
+        <a href="../index.html" class="mobile-logo">
+            <h1>MasVisio Research</h1>
+            <span>Vision Intelligence & Biomedical Engineering</span>
+        </a>
+    </header>
+
     <aside class="sidebar" role="navigation" aria-label="Main navigation">
         <div class="sidebar-header">
             <a href="../index.html" class="sidebar-logo">
