--- a/ko/privacy.html
+++ b/ko/privacy.html
@@ -16,6 +16,13 @@
 </head>
 
 <body class="sidebar-layout">
+    <header class="mobile-header">
+        <a href="index.html" class="mobile-logo">
+            <h1>MasVisio Research</h1>
+            <span>Vision Intelligence & Biomedical Engineering</span>
+        </a>
+    </header>
+
     <aside class="sidebar">
         <div class="sidebar-header">
             <a href="index.html" class="sidebar-logo">
