--- a/ko/research.html
+++ b/ko/research.html
@@ -17,6 +17,13 @@
 </head>
 
 <body class="sidebar-layout">
+    <header class="mobile-header">
+        <a href="index.html" class="mobile-logo">
+            <h1>MasVisio Research</h1>
+            <span>Vision Intelligence & Biomedical Engineering</span>
+        </a>
+    </header>
+
     <aside class="sidebar" role="navigation" aria-label="메인 네비게이션">
         <div class="sidebar-header">
             <a href="index.html" class="sidebar-logo">
