⚡ UI 업데이트: 모바일 헤더 로고 2단 레이아웃 및 스타일 개선 (가독성 향상)

--- a/publications/index.html
+++ b/publications/index.html
@@ -20,8 +20,8 @@
 <body class="sidebar-layout">
     <header class="mobile-header">
         <a href="../index.html" class="mobile-logo">
-            <h1>MasVisio Research</h1>
-            <span>Vision Intelligence & Biomedical Engineering</span>
+            <h1>MasVisio<br>Research</h1>
+            <span class="logo-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
         </a>
     </header>
 
