--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body class="sidebar-layout">
         <header class="mobile-header">
         <a href="index.html" class="mobile-logo">
-            <h1>MasVisio Research</h1>
-            <span>Vision Intelligence & Biomedical Engineering</span>
+            <h1>MasVisio<br>Research</h1>
+            <span class="logo-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
         </a>
     </header>
     <aside class="sidebar" role="navigation" aria-label="Main navigation">
